restyled login, fixed bug where animation flickers

--- a/Fitness_Tracker/app/src/login/style.scss
+++ b/Fitness_Tracker/app/src/login/style.scss
@@ -1,7 +1,7 @@
 .body{
 	margin:0;
-	color:#6a6f8c;
-	background:#c8c8c8;
+	color:#ffffff;
+	background:#cde5ec;
 	font:600 16px/18px 'Open Sans',sans-serif;
 }
 *,:after,:before{box-sizing:border-box}
@@ -10,12 +10,12 @@
 a{color:inherit;text-decoration:none}
 
 .login-wrap{
-	width:100%;
+  width:100%;
 	margin:auto;
 	max-width:525px;
 	min-height:800px;
 	position:relative;
-	background:url(https://raw.githubusercontent.com/khadkamhn/day-01-login-form/master/img/bg.jpg) no-repeat center;
+	background-image: linear-gradient(to bottom right, #286af9f3, #83e4f5ab);
 	box-shadow:0 12px 15px 0 rgba(0,0,0,.24),0 17px 50px 0 rgba(0,0,0,.19);
 	.loading-screen {
 		display: none;
@@ -73,8 +73,13 @@ a{color:inherit;text-decoration:none}
 	height:100%;
 	position:absolute;
 	padding: 40px 70px 50px 70px;
-	background:rgba(40,57,101,.9);
+	// background:rgba(40,57,101,.9);
 }
+
+#signUpButton {
+  margin-top: 30px;
+}
+
 .login-html .sign-in-htm,
 .login-html .sign-up-htm{
 	top:0;
@@ -107,14 +112,13 @@ a{color:inherit;text-decoration:none}
 .login-html .sign-in:checked + .tab,
 .login-html .sign-up:checked + .tab{
 	color:#fff;
-	border-color:#1161ee;
+	border-color:#fbfbfb;
 }
-.login-form{
+.login-form {
 	min-height:345px;
 	position:relative;
 	perspective:1000px;
 	transform-style:preserve-3d;
-
 }
 .login-form .group{
 	margin-bottom:15px;
@@ -131,14 +135,14 @@ a{color:inherit;text-decoration:none}
 	border:none;
 	padding:15px 20px;
 	border-radius:25px;
-	background:rgba(255,255,255,.1);
+	background:rgba(255, 255, 255, 0.246);
 }
 .login-form .group input[data-type="password"]{
 	text-security:circle;
 	-webkit-text-security:circle;
 }
 .login-form .group .label{
-	color:#aaa;
+	color:#fff;
 	font-size:12px;
 }
 .login-form .group .button{
@@ -193,12 +197,65 @@ a{color:inherit;text-decoration:none}
 
 .hr{
 	height:2px;
-	margin:60px 0 50px 0;
+  margin-top: 30px;
+  margin-bottom: 30px;
 	background:rgba(255,255,255,.2);
 }
 .foot-lnk{
+  -webkit-backface-visibility: hidden;
 	text-align:center;
 	#forgot-link{
 		cursor: pointer;
-	}
+  }
+  #forget-form {
+    text-align: left;
+  }
+}
+
+@keyframes stretch-enter {
+  0% {
+    transform: scale(.3);
+    // border-radius: 100%;
+  }
+  100% {
+    transform: scale(1.0);
+  }
+}
+
+@keyframes stretch-exit {
+  0% {
+    transform: scale(1.0);
+  }
+  100% {
+    transform: scale(.1);
+    // border-radius: 100%;
+  }
+}
+
+// CSS transition group stuff
+
+.pwReset-enter {
+  opacity: 0;
+}
+
+.pwReset-enter-active {
+  opacity: 1;
+  animation-name: stretch-enter;
+  animation-duration: 250ms; 
+  animation-timing-function: ease-out; 
+}
+
+.pwReset-exit {
+  opacity: 1;
+}
+
+.pwReset-exit-active {
+  animation-name: stretch-exit;
+  animation-duration: 252ms; // make it a little longer than 250ms so animation gets cut off and doesnt flicker
+  animation-timing-function: ease-out; 
+} 
+
+.pwReset-exit-done {
+  opacity: 0;
+  transform: scale(.1);
 }
